--- a/index.html
+++ b/index.html
@@ -1,323 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 
 <head>
-    <title>爱购</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <style>
-       .search-input {
-            width: 100%;
-            height: 44px;
-            padding-left: 44px;
-            border: 2px solid #999;
-            border-radius: 22px;
-            outline: none;
-            font-size: 16px;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23666"><path d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"/></svg>') no-repeat 16px center;
-            background-size: 20px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-            transition: top 0.3s ease;
-            background-color: white;
-        }
-
-       .search-input::placeholder {
-            color: #999;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 64px;
-        }
-
-        th,
-        td {
-            border: 1px solid #ccc;
-            padding: 8px;
-            text-align: left;
-        }
-
-       .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-       .quantity-btn {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin: 0 10px;
-            background-color: #8b4513;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-
-       .close-btn,
-       .add-btn {
-            padding: 10px 20px;
-            margin-top: 10px;
-            border-radius: 4px;
-        }
-
-       .close-btn {
-            background: #f4f4f4;
-            border: 1px solid #ccc;
-        }
-
-       .add-btn {
-            background: #8b4513;
-            color: white;
-            border: none;
-        }
-
-       .bottom-buttons {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: white;
-            padding: 10px 0;
-            text-align: center;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-
-       .bottom-button {
-            padding: 10px 20px;
-            margin: 0 10px;
-            background-color: #8b4513;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        /* 新增的已加购提示样式 */
-       .added-toast {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 4px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            display: none;
-        }
-
-        /* 新增的复制成功提示样式 */
-       .copied-toast {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 15px 25px;
-            border-radius: 8px;
-            z-index: 999;
-        }
-
-       .add-to-cart-btn {
-            background-color: #ff0000; /* 红底 */
-            color: white;
-            border: none;
-            border-radius: 4px;
-            padding: 8px 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-       .add-to-cart-btn:hover {
-            background-color: #cc0000; /* 鼠标悬停时颜色变深 */
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>简单问候页面</title>
 </head>
 
 <body>
-    <input type="search" placeholder="请输入商品名称" class="search-input" oninput="filterTable()"
-        onkeydown="handleKeyDown(event)">
-    <table>
-        <thead>
-            <tr>
-                <th>时间</th>
-                <th>商品名</th>
-                <th>价格</th>
-                <th>操作</th>
-            </tr>
-        </thead>
-        <tbody id="tableBody">
-            <!-- 表格行将通过 JavaScript 动态添加 -->
-        </tbody>
-    </table>
-    <!-- 添加购物清单弹出框 -->
-    <div class="popup" id="myPopup">
-        <div class="popup-content">
-            <h2>添加购物清单</h2>
-            <p id="popupProductInfo"></p>
-            <button class="quantity-btn" onclick="decrementQuantity()">-</button>
-            <input type="number" id="quantity" value="1" min="1" style="width: 50px; text-align: center;">
-            <button class="quantity-btn" onclick="incrementQuantity()">+</button>
-            <button class="close-btn" onclick="closePopup()">取消</button>
-            <button class="add-btn" onclick="addToCart()">加入清单</button>
-        </div>
-    </div>
-    <!-- 已加购提示 -->
-    <div class="added-toast" id="addedToast">已加购</div>
-    <!-- 复制成功提示 -->
-    <div class="copied-toast" id="copiedToast">微信复制成功</div>
-    <!-- 底部按钮 -->
-    <div class="bottom-buttons">
-        <button class="bottom-button" onclick="goToHome()">首页</button>
-        <button class="bottom-button" onclick="goToCart()">购物清单</button>
-        <button class="bottom-button" onclick="copyWechat()">复制微信</button>
-    </div>
-    <script>
-        const tableBody = document.getElementById('tableBody');
-        const searchInput = document.querySelector('.search-input');
-        let currentProduct = null;
-        let products = [];
-
-        // 读取 JSON 文件数据
-        fetch('products.json')
-           .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok:'+ response.statusText);
-                }
-                return response.json();
-            })
-           .then(data => {
-                products = data;
-                // 动态填充表格
-                products.forEach(product => {
-                    const row = document.createElement('tr');
-                    const timeCell = document.createElement('td');
-                    timeCell.textContent = new Date().toLocaleString();
-                    const nameCell = document.createElement('td');
-                    nameCell.textContent = product.商品名;
-                    const priceCell = document.createElement('td');
-                    priceCell.textContent = product.价格;
-                    const actionCell = document.createElement('td');
-                    const button = document.createElement('button');
-                    button.textContent = '加购';
-                    button.className = 'add-to-cart-btn'; // 添加新的类名
-                    button.onclick = () => {
-                        currentProduct = product;
-                        document.getElementById('popupProductInfo').textContent = `${product.商品名} ￥${product.价格}`;
-                        document.getElementById('myPopup').style.display = 'block';
-                    };
-                    actionCell.appendChild(button);
-                    row.appendChild(timeCell);
-                    row.appendChild(nameCell);
-                    row.appendChild(priceCell);
-                    row.appendChild(actionCell);
-                    tableBody.appendChild(row);
-                });
-            })
-           .catch(error => {
-                console.error('读取 JSON 文件时出错:', error);
-            });
-
-        // 搜索功能
-        function filterTable() {
-            const input = document.querySelector('.search-input');
-            const filter = input.value.toUpperCase();
-            const rows = tableBody.getElementsByTagName('tr');
-            for (let i = 0; i < rows.length; i++) {
-                const nameCell = rows[i].getElementsByTagName('td')[1];
-                if (nameCell) {
-                    const txtValue = nameCell.textContent || nameCell.innerText;
-                    rows[i].style.display = txtValue.toUpperCase().indexOf(filter) > -1? '' : 'none';
-                }
-            }
-        }
-
-        // 处理键盘按下事件（回车触发搜索）
-        function handleKeyDown(event) {
-            if (event.key === 'Enter') {
-                filterTable();
-            }
-        }
-
-        // 数量增减
-        let currentQuantity = 1;
-        function incrementQuantity() {
-            currentQuantity = Math.max(1, currentQuantity + 1);
-            document.getElementById('quantity').value = currentQuantity;
-        }
-        function decrementQuantity() {
-            currentQuantity = Math.max(1, currentQuantity - 1);
-            document.getElementById('quantity').value = currentQuantity;
-        }
-
-        // 关闭弹出框
-        function closePopup() {
-            document.getElementById('myPopup').style.display = 'none';
-        }
-
-        // 加入购物车逻辑
-        function addToCart() {
-            if (!currentProduct) return;
-            // 保存到本地存储（模拟购物车）
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            cart.push({
-                name: currentProduct.商品名,
-                price: currentProduct.价格,
-                quantity: currentQuantity,
-                time: new Date().toLocaleString()
-            });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            // 显示已加购提示
-            const toast = document.getElementById('addedToast');
-            toast.style.display = 'block';
-            setTimeout(() => toast.style.display = 'none', 2000);
-            closePopup();
-        }
-
-        // 底部按钮跳转
-        function goToHome() {
-            window.location.href = "shop.html";
-        }
-        function goToCart() {
-            window.location.href = "cart.html";
-        }
-
-        // 复制微信号到剪贴板
-        function copyWechat() {
-            const wechatNumber ='meiliaigou4';
-            navigator.clipboard.writeText(wechatNumber).then(() => {
-                const copiedToast = document.getElementById('copiedToast');
-                copiedToast.style.display = 'block';
-                setTimeout(() => {
-                    copiedToast.style.display = 'none';
-                }, 5000);
-            }).catch(err => {
-                console.error('Failed to copy: ', err);
-            });
-        }
-
-        // 监听页面滚动事件
-        window.addEventListener('scroll', function () {
-            const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-            if (scrollTop > 64) {
-                searchInput.style.top = '64px';
-            } else {
-                searchInput.style.top = '0';
-            }
-        });
-    </script>
+    <h1>你好呀</h1>
 </body>
 
-</html>    
+</html>
