--- a/cart.html
+++ b/cart.html
@@ -338,7 +338,7 @@
 
         // 8. 导航跳转
         function goToHome() {
-            window.location.href = "shop.html";
+            window.location.href = "index.html";
         }
         function goToCart() {
             window.location.reload(); // 刷新购物车
